[gd_scene load_steps=2 format=3 uid="uid://vfv3258muynx"]

[ext_resource type="Script" uid="uid://bf5g8no7bgrw3" path="res://scripts/custom_line_entry.gd" id="1_rqtbj"]

[node name="CustomLineEntry" type="HBoxContainer" node_paths=PackedStringArray("key_option_button", "color_picker_button") groups=["drone_ask"]]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -71.5
offset_right = 71.5
offset_bottom = 31.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0
alignment = 1
script = ExtResource("1_rqtbj")
key = null
color = null
key_option_button = NodePath("KeyOptionButton")
color_picker_button = NodePath("ColorPickerButton")

[node name="KeyOptionButton" type="OptionButton" parent="."]
layout_mode = 2
selected = 0
fit_to_longest_item = false
item_count = 29
popup/item_0/text = "Throttle 1"
popup/item_0/id = 0
popup/item_1/text = "Throttle 2"
popup/item_1/id = 1
popup/item_2/text = "Throttle 3"
popup/item_2/id = 2
popup/item_3/text = "Throttle 4"
popup/item_3/id = 3
popup/item_4/text = "Velocity X"
popup/item_4/id = 4
popup/item_5/text = "Velocity Y"
popup/item_5/id = 5
popup/item_6/text = "Velocity Z"
popup/item_6/id = 6
popup/item_7/text = "Pitch"
popup/item_7/id = 7
popup/item_8/text = "Roll"
popup/item_8/id = 8
popup/item_9/text = "Yaw"
popup/item_9/id = 9
popup/item_10/text = "Pitch Rate"
popup/item_10/id = 10
popup/item_11/text = "Roll Rate"
popup/item_11/id = 11
popup/item_12/text = "Yaw Rate"
popup/item_12/id = 12
popup/item_13/text = "Pitch Angle Pid Input"
popup/item_13/id = 13
popup/item_14/text = "Pitch Angle Pid Output"
popup/item_14/id = 14
popup/item_15/text = "Pitch Angle Pid Setpoint"
popup/item_15/id = 15
popup/item_16/text = "Pitch Rate Pid Input"
popup/item_16/id = 16
popup/item_17/text = "Pitch Rate Pid Output"
popup/item_17/id = 17
popup/item_18/text = "Pitch Rate Pid Setpoint"
popup/item_18/id = 18
popup/item_19/text = "Roll Angle Pid Input"
popup/item_19/id = 19
popup/item_20/text = "Roll Angle Pid Output"
popup/item_20/id = 20
popup/item_21/text = "Roll Angle Pid Setpoint"
popup/item_21/id = 21
popup/item_22/text = "Roll Rate Pid Input"
popup/item_22/id = 22
popup/item_23/text = "Roll Rate Pid Output"
popup/item_23/id = 23
popup/item_24/text = "Roll Rate Pid Setpoint"
popup/item_24/id = 24
popup/item_25/text = "Yaw Rate Pid Input"
popup/item_25/id = 25
popup/item_26/text = "Yaw Rate Pid Output"
popup/item_26/id = 26
popup/item_27/text = "Yaw Rate Pid Setpoint"
popup/item_27/id = 27
popup/item_28/text = "Is Armed"
popup/item_28/id = 28

[node name="ColorPickerButton" type="ColorPickerButton" parent="."]
custom_minimum_size = Vector2(31, 0)
layout_mode = 2
color = Color(1, 1, 1, 1)
edit_alpha = false
edit_intensity = false

[connection signal="item_selected" from="KeyOptionButton" to="." method="_on_key_option_button_item_selected"]
[connection signal="color_changed" from="ColorPickerButton" to="." method="_on_color_picker_button_color_changed"]
